Configuration ngrok et dÃ©ploiement Netlify - Ajout support ngrok avec URL fixe - Configuration Netlify avec variables d'environnement - Ajout header ngrok-skip-browser-warning - Copie variables.json dans templates/form/config - Documentation Cloudflare Tunnel et Netlify

--- a/templates/form/index.html
+++ b/templates/form/index.html
@@ -506,8 +506,8 @@
   <script>
     // Variables d'environnement - peuvent être surchargées par Netlify
     window.ENV = {
-      WEBHOOK_URL: 'http://localhost:5678/webhook/7f72ac69-35b7-4771-a5c6-7acb18947254',
-      WEBHOOK_EMAIL_URL: 'http://localhost:5678/webhook/1ee6e745-fc31-4fd8-bc59-531bd4a69997'
+      WEBHOOK_URL: 'https://dee-wakeful-succulently.ngrok-free.dev/webhook/7f72ac69-35b7-4771-a5c6-7acb18947254',
+      WEBHOOK_EMAIL_URL: 'https://dee-wakeful-succulently.ngrok-free.dev/webhook/1ee6e745-fc31-4fd8-bc59-531bd4a69997'
     };
   </script>
 
